# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

ohos_source_set("bridge") {
  cflags_objc = [
    "-fobjc-arc",
    "-fobjc-weak",
  ]

  cflags_objcc = cflags_objc

  include_dirs = [
    "$ace_root/frameworks",
    "$ace_root",
    "$ace_root/adapter/ios/capability/bridge",
    "$ace_root/adapter/ios/capability/bridge/codec",
  ]

  sources = [
    "BridgeGCDTaskQueue.mm",
    "BridgeManagerHolder.mm",
    "BridgePlugin+jsMessage.mm",
    "BridgePlugin.mm",
    "BridgePlugin+internal.mm",
    "BridgePluginManager+internal.mm",
    "BridgePluginManager.mm",
    "BridgeTaskInfo.m",
    "BridgeTaskQueue.m",
    "BridgeTaskQueueHandler.m",
    "MethodData.mm",
    "ResultValue.mm",
    "TaskOption.mm",
    "bridge_manager.mm",
  ]

  deps = [ "$ace_root/adapter/ios/capability/bridge/codec:bridegecodec" ]

  libs = [
    "AVFoundation.framework",
    "UIKit.framework",
  ]
}
