# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

ohos_source_set("accessibility") {
  cflags_objc = [
    "-fobjc-arc",
    "-fobjc-weak",
  ]

  cflags_objcc = cflags_objc
  cflags_cc = [ "-fvisibility=hidden" ]

  include_dirs = [
    "$ace_root/frameworks",
    "$ace_root",
  ]

  sources = [
    "AccessibilityElement.mm",
    "AccessibilityNodeInfo.mm",
    "AccessibilityWindowView.mm",
    "AceAccessibilityBridge.mm",
  ]

  deps = [ "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client_static" ]

  defines = [
    "BUILD_FOR_ARKUI",
    "CROSS_PLATFORM",
  ]

  configs = [
    "$ace_root:ace_config",
    "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/kits/native/ability:abilitykit_native_config",
    "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/kits/native/appkit:appkit_native_config",
  ]
}
