# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

ohos_source_set("logIntercept") {
  cflags_objc = [
    "-fvisibility=default",
    "-fobjc-arc",
    "-fobjc-weak",
    "-Wno-nullability-completeness",
    "-O0",
  ]

  configs = [ "$ace_root/interfaces/inner_api/ace_kit:ace_kit_config" ]

  deps = [ "//foundation/appframework/resource_management/interfaces/native/resource:rawfile" ]

  cflags_objcc = cflags_objc

  sources = [
    "LogInterfaceBridge.mm",
    "Logger.mm",
  ]
}
