import("//build/ohos.gni")
import("//foundation/ace/ace_engine/ace_config.gni")

ohos_source_set("resource") {
  #   defines += invoker.defines
  #   cflags_cc += invoker.cflags_cc

  cflags_objc = [
    "-fobjc-arc",
    "-fobjc-weak",
  ]

  cflags_objcc = cflags_objc

  include_dirs = [
    "//third_party/",
    "//third_party/flutter",
    "//third_party/flutter/engine",
    "//third_party/flutter/skia",

    "//third_party/flutter/engine/flutter/shell/platform/darwin/common/framework/Headers",
    "//third_party/flutter/engine/flutter/shell/platform/darwin/ios/framework/Headers",
    "//third_party/flutter/engine/flutter/shell/common",
    "//foundation/ace/ace_engine/frameworks",
    "//foundation/ace/ace_engine",
  ]

  sources = [
    "AceResourcePlugin.m",
    "AceResourceRegisterOC.m",
  ]

  libs = [
    "AVFoundation.framework",
    "UIKit.framework",
  ]
}
